service-mesh/catalogue-db-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.16.0 (0c01309)
  creationTimestamp: null
  labels:
    app: catalogue-db
    version: v1
  name: catalogue-db
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: catalogue-db
    spec:
      volumes:
      - name: catalogue-db-volume
        persistentVolumeClaim:
          claimName: catalogue-db-pvc
      containers:
      - env:
        - name: MYSQL_ALLOW_EMPTY_PASSWORD
          value: "true"
        - name: MYSQL_DATABASE
          value: socksdb
        - name: MYSQL_ROOT_PASSWORD
        image: weaveworksdemos/catalogue-db:0.3.0
        name: catalogue-db
        ports:
        - containerPort: 3306
        resources: {}
        livenessProbe:
          exec:
            command:
            - mysqladmin
            - ping
          initialDelaySeconds: 5
          periodSeconds: 10
        readinessProbe:
          exec:
            command:
            - mysqladmin
            - ping
          initialDelaySeconds: 5
          periodSeconds: 10
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: catalogue-db-volume
      hostname: catalogue-db
      restartPolicy: Always
status: {}
