service-mesh/catalogue-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.16.0 (0c01309)
  creationTimestamp: null
  labels:
    app: catalogue
  name: catalogue
spec:
  type: NodePort
  ports:
  - name: "http"
    port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: catalogue
status:
  loadBalancer: {}
